primarysheep icon static

--- a/app4K/app/app4k/components.css
+++ b/app4K/app/app4k/components.css
@@ -249,8 +249,22 @@ Stage header
 
 .cSiteHeader {
     display: block;
-    padding-left: 12.5%;
-    padding-right: 12.5%;
+    position: relative;
+    margin-left: 12.5%;
+    margin-right: 12.5%;
+}
+.cSiteHeader::before {
+    content: '';
+    display: block;
+    position: absolute;
+    z-index: 1;
+    top: 0.5rem;
+    left: -9rem;
+    width: 8rem;
+    height: 8rem;
+    background-position: left top;
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 .cSiteHeader .aTitle {
     margin: 0;
@@ -296,7 +310,8 @@ Default landing
     width: 42%;
 }
 .cLandingDefault .cLanding__content {
-    padding-left: 4vw;
+    padding-left: 8.5vw;
+    padding-right: 4vw;
     width: 58%;
 }
 
