full width over container

--- a/Snippets/css.css
+++ b/Snippets/css.css
@@ -39,6 +39,13 @@ div {
 
 /* ======================================================= Components */
 
+
+
+.fullwidth_over_centered_container {
+  margin-left: calc(50% - 50vw);
+  margin-right: calc(50% - 50vw);
+}
+
 /* Focused shadow */
 
 body.hasFocusedShadow {
