--- a/Snippets/css.css
+++ b/Snippets/css.css
@@ -54,6 +54,18 @@ div {
 
 /* ======================================================= Components */
 
+/* first text row without empty space at the top */
+
+@mixin lhCrop($line-height) {
+  &::before {
+    content: '';
+    display: block;
+    height: 0;
+    width: 0;
+    margin-top: calc((1 - #{$line-height}) * 0.5em);
+  }
+}
+
 
 
 .fullwidth_over_centered_container {
