--- a/Snippets/css.css
+++ b/Snippets/css.css
@@ -1,5 +1,9 @@
 @import url("part.css");
 
+html {
+  scroll-behavior: smooth;
+}
+
 /*
      600px      900px                1200px       1800px
 phone     tablet     landscape tablet      desktop      big
