--- a/app5K/__alps/app/style/design.scss
+++ b/app5K/__alps/app/style/design.scss
@@ -1,6 +1,7 @@
 /* BODY.design */
 
-$design-o-coverBackground: url(../../art/background_cover.png);
+//$design-o-coverBackground: url(../../art/background_cover.png);
+$design-o-coverBackground: url(../../art/placeholder_bg.jpg);
 
 .design {
 
