home rush for css app

--- a/app5K/__alps/app/style/app_reset_css.css
+++ b/app5K/__alps/app/style/app_reset_css.css
@@ -1,6 +1,9 @@
 /*
-    reset_css, 2018.9.3
+    reset_css 1002 Monica De Gennaro, 2018.10.5
+*/
 
+
+/*
     Based on:
     custom-reset.css | 27.08.2018 | https://yurch-html.github.io/dist/custom-reset.html
 */
