--- a/app5K/__alps/app/style/design.scss
+++ b/app5K/__alps/app/style/design.scss
@@ -1,3 +1,144 @@
+/* app interface components, 5001
+
+    # List
+    [basic elements]
+    [helpers]
+    yiWallpaper
+    yiSidemenu
+
+    # Updated 2018.8.26
+*/
+
+/* ==============================================================
+    helpers
+============================================================== */
+.layer {
+    margin: 0;
+    &:before {
+        content:'';
+        display: table;
+    }
+}
+.grid {
+    &,
+    & .illustration {
+        display: grid;
+        grid-template-columns:
+            unquote(" [full-start] minmax(0, 1fr) ")
+            unquote(" [over-start] minmax(1rem, 2rem) ")
+            unquote(" [main-start] minmax(0, 38em) ")
+            unquote(" [main-end]   minmax(1rem, 2rem) ")
+            unquote(" [over-end]   minmax(0, 1fr) ")
+            unquote(" [full-end]; ");
+    }
+    & > *,
+    & .illustration .textcontent {
+        grid-column: main;
+    }
+    & .layer,
+    & .illustration > * {
+        grid-column: full;
+    }
+    & .illustration {
+        grid-column: over;
+        margin: 0;
+    }
+}
+.illustration-wide {
+    object-fit: cover;
+}
+/* */
+
+
+/* ==============================================================
+    body.yiWallpaper
+    fixed background, fade when inactive
+============================================================== */
+$yiWallpaper-o-defaultInnactiveOpacity: 0.2;
+$yiWallpaper-o-defaultOpacityDuration: 640ms;
+$yiWallpaper-o-defaultRestoreDuration: 200ms;
+.yiWallpaper {
+    position: relative;
+    z-index: -1;
+    &:before {
+        content: '';
+        position: absolute;
+        z-index: -1;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        pointer-events: none;
+        opacity: 1;
+        transition: opacity $yiWallpaper-o-defaultRestoreDuration ease-in;
+    }
+    &, &:before {
+        background-attachment: fixed;
+        background-size: cover;
+        background-position: top center;
+        background-repeat: no-repeat;
+    }
+    &.has-inactive-wallpaper:before {
+        transition-duration: $yiWallpaper-o-defaultOpacityDuration;
+        transition-timing-function: ease-out;
+        opacity: $yiWallpaper-o-defaultInnactiveOpacity;
+    }
+}
+/* */
+
+
+/* ==============================================================
+    .yiSidemenu
+    hidden panel
+============================================================== */
+.yiSidemenu {
+    position: fixed;
+    z-index: 13;
+    top: 0;
+    bottom: 0;
+    left: 100%;
+
+    width: 100%;
+    max-width: 38rem;
+
+    transform: translateX(0);
+    transition: transform 200ms ease-in;
+
+    .has-open-sidemenu & {
+        transition-timing-function: ease-out;
+        transform: translateX(-100%);
+    }
+}
+.yiSidemenu__shadowOverlay {
+    background-color: rgba(0,0,0,.9);
+    position: absolute;
+    z-index: 12;
+    left: 100%;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    .has-open-sidemenu & {
+        left: 0;
+    }
+}
+/* */
+
+/* ==============================================================
+    .pathdance-svg
+    svg path animation support
+============================================================== */
+.pathdance-svg {
+    .pathdance-step:not(.step0) {
+        display: none;
+    }
+}
+/* */
+
+
+
+
+
+
 /* BODY.design */
 
 //$design-o-coverBackground: url(../../art/background_cover.png);
@@ -29,3 +170,16 @@ $design-o-coverBackground: url(../../art/placeholder_bg.jpg);
     }
 
 }
+
+/* Ordnung am Styles */
+
+.svg svg {
+    width: 400px;
+}
+.svg svg path {
+    fill:white;
+}
+.block-screen {
+    min-height:60vh;
+}
+
