--- a/app5K/__alps/app/style/ordnung.css
+++ b/app5K/__alps/app/style/ordnung.css
@@ -1,11 +1,2 @@
-/* Ordnung am Styles */
-
-.svg svg {
-    width: 400px;
-}
-.svg svg path {
-    fill:white;
-}
-.block-screen {
-    min-height:60vh;
-}
+/* # Ordnung am Styles */
+/* custom css */
